# fabula

./: .gitignore  README.md  pyproject.toml
src/fabula/: __init__.py  arc.py  cli.py  core.py  plot.py  schemas.py  scorer.py  segment.py
tests/: test_arc.py  test_core_smoke.py  test_scorer_pooling.py  test_segment.py
